Timestamps on tags

--- a/src/css/keywordTags.css
+++ b/src/css/keywordTags.css
@@ -3,7 +3,7 @@
     font-size: x-large;
     vertical-align: center;
     background-color: transparent;
-    justify-content: baseline;
+    justify-content: space-evenly;
 }
 
 .tag-element {
@@ -17,14 +17,40 @@
     background-color: #212529 !important;
     vertical-align: middle;
     line-height: normal;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .tag-element button {
     width: auto;
     font-weight: 300;
+    margin: auto;
 }
 
 .delete-button-area {
+    width: 100%;
     margin-top: 20px;
     margin-bottom: 20px;
+    float: right;
+}
+
+.delete-button {
+    width: 14%;
+    margin-left: 4%;
+    margin-right: 4%;
+    padding: auto;
+    display: inline-block;
+}
+
+.input-group {
+    display: inline;
+}
+
+hr {
+    width: 39%;
+    display: inline-block;
+    margin-bottom: 4px;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding: 0px;
 }
