--- a/src/App.css
+++ b/src/App.css
@@ -44,4 +44,7 @@
   width: 100%;
   background-color: var(--gray-800);
   font-family: var(--secondary-font);
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
