--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,17 @@
 @import './App.css';
 
-body, html {
-  height: 100%;
-  width: 100%;
-  margin: 0;
+body,
+html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--gray-800) !important;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background-color: var(--surface-tertiary);
+  transition: background-color 0.5s;
 }
 
 code {
