--- a/src/App.css
+++ b/src/App.css
@@ -16,17 +16,17 @@
 	--link-color: #14b8a6;
   --white: #fff;
   --black: #000;
-  --gray-50: #f7f7f8;
-  --gray-100: #ececf1;
-  --gray-200: #d9d9e3;
-  --gray-300: #c5c5d2;
-  --gray-400: #acacbe;
-  --gray-500: #8e8ea0;
-  --gray-600: #565869;
-  --gray-700: #40414f;
-  --gray-800: #343541;
-  --gray-900: #202123;
-  --gray-950: #050509;
+  --gray-50: #f9f9f9;
+  --gray-100: #ececec;
+  --gray-200: #cdcdcd;
+  --gray-300: #b4b4b4;
+  --gray-400: #9b9b9b;
+  --gray-500: #676767;
+  --gray-600: #424242;
+  --gray-700: #2f2f2f;
+  --gray-800: #171717;
+  --gray-900: #171717f7;
+  --gray-950: #0d0d0d;
   --gizmo-gray-500: #999;
   --gizmo-gray-600: #666;
   --gizmo-gray-950: #0f0f0f;
@@ -42,7 +42,7 @@
 .App {
   text-align: center;
   width: 100%;
-  background-color: var(--gray-800);
+  background-color: var(--surface-primary);
   font-family: var(--secondary-font);
   display: flex;
   min-height: 100vh;
