--- a/src/components/styles/tagsStyles.css
+++ b/src/components/styles/tagsStyles.css
@@ -14,6 +14,7 @@
     margin-bottom: auto;
     vertical-align: center;
     font-size: x-large;
+    border: 1px;
     font-weight: 300;
     background-color: var(--surface-secondary) !important;
     vertical-align: middle;
@@ -31,7 +32,7 @@
 .tag-input {
     color: var(--text-primary);
     border: none;
-    background-color: var(--surface-primary);
+    background-color: var(--surface-secondary);
 }
 
 .tag-row {
