--- a/src/pages/styles/homepageStyles.css
+++ b/src/pages/styles/homepageStyles.css
@@ -5,26 +5,18 @@ header .logo-area {
 }
 
 .home-content {
-    height: 100%;
+    min-height: 100vh;
     width: 65%;
     margin-top: 10%;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: auto;
-    padding: auto;
-    background-color: var(--gray-800);
     color: var(--gray-100);
     flex-grow: 1;
-}
-
-.home-content {
-    margin-bottom: 50px;
     font-family: var(--secondary-font);
-    flex-grow: 1;
-    min-height: 100vh;
+
 }
 
-.subheading{
+.subheading {
     margin-bottom: 50px;
     font-size: 200%;
     font-weight: 200;
@@ -33,10 +25,8 @@ header .logo-area {
 
 footer {
     width: '100%';
-    padding-top: 80px;
-    padding-bottom: 70px;
     text-align: 'center';
-    background-color: var(--surface-tertiary);
     color: var(--text-secondary);
-    height: 20vh;
+    height: 10vh;
+    margin-top: -7%;
 }
