--- a/src/pages/styles/homepageStyles.css
+++ b/src/pages/styles/homepageStyles.css
@@ -1,32 +1,61 @@
+.landing-page {
+    height: 100dvh;
+}
+
 header .logo-area {
     width: 11%;
+    min-width: 90px;
     padding-left: 2.5%;
     padding-top: 2%;
 }
 
 .home-content {
-    min-height: 100vh;
     width: 65%;
     margin-top: 10%;
     margin-left: auto;
     margin-right: auto;
     color: var(--gray-100);
-    flex-grow: 1;
     font-family: var(--secondary-font);
-
+    flex: 1;
 }
 
 .subheading {
     margin-bottom: 50px;
-    font-size: 200%;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: xx-large;
     font-weight: 200;
     font-family: var(--tertiary-font);
 }
 
 footer {
-    width: '100%';
-    text-align: 'center';
-    color: var(--text-secondary);
-    height: 10vh;
-    margin-top: -7%;
+    height: 35dvh;
+}
+
+.footer-text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    color: var(--footer-primary)
+}
+
+@media (max-width : 680px) {
+    .subheading {
+        margin-bottom: 30px;
+        font-size: x-large;
+    }
+    
+    header .logo-area {
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 2dvh;
+        margin-bottom: 2dvh;
+    }
+}
+
+@media (max-width : 450px) {  
+    .subheading {
+        font-size: large;
+    }
 }
