--- a/src/components/styles/tagsStyles.css
+++ b/src/components/styles/tagsStyles.css
@@ -4,7 +4,12 @@
     vertical-align: center;
     background-color: transparent;
     justify-content: space-evenly;
-    color: var(--text-primary)
+    color: var(--text-primary);
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 20%;
+    padding-left: 2%;
 }
 
 .tag-element {
@@ -33,15 +38,20 @@
     color: var(--text-primary);
     border: none;
     background-color: var(--surface-secondary);
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .tag-row {
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 2%;
     padding-right: 0px;
     color: white;
 }
 
 .tag-col {
+    min-width: 80%;
     margin-right: -12px !important;
 }
 
@@ -59,7 +69,7 @@
     height: 100%;
     width: auto;
     max-height: 72px;
-    min-width: 100px;
+    width: 100px;
     display: inline-block;
     background-color: var(--surface-tertiary);
     border: none;
@@ -68,11 +78,34 @@
 
 @media (max-width : 850px) {
     .tag-input {
-        min-width: 210px;
         margin-bottom: 2.5%;
     }
 
     .tag-area {
         width: 100%;
+        margin: 10px;
+        font-size: medium;
+        width: 100%;
+        height: 100%;
+    }
+
+    .tag-element {
+        width: auto;
+        height: auto;
+        margin-top: 1%;
+        margin-bottom: auto;
+        vertical-align: center;
+        font-size: medium;
+    }
+
+    .delete-button {
+        height: 100%;
+    }
+}
+
+@media (max-width : 680px) {
+    .delete-button-area {
+        margin-top: 3% !important;
+        margin-bottom: 3% !important;
     }
 }
