--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
-  padding: 0;
   height: 100%;
+  width: 100%;
   background-color: var(--surface-secondary);
   transition: background-color 0.5s;
 }
