--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,13 @@
   flex-direction: column;
   min-height: 100vh;
 }
+
+.landing-page {
+  height: 100dvh;
+}
+
+.logo-area {
+  width: 11%;
+  min-width: 90px;
+  padding-left: 2.5%;
+}
