--- a/src/components/styles/transcribeFormStyles.css
+++ b/src/components/styles/transcribeFormStyles.css
@@ -8,8 +8,6 @@
 }
 
 .transcription-row {
-    /* padding: 0;
-    margin: 0; */
     margin-top: 2%;
     margin-left: auto;
     margin-right: auto;
@@ -64,6 +62,8 @@
 
 .spinner-col {
     margin-top: 1.5%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 @media screen and (max-width: 400px) {
