Cleaned up CSS for navBar

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,8 @@
   --border-medium: var(--gray-600);
   --border-heavy: var(--gray-500);
   --footer-primary: var(--gray-500);
-	--link-color: #14b8a6;
+	--link-color: #a8e3d8;
+  --hover-color: #8ff7e4;
   --white: #fff;
   --black: #000;
   --gray-50: #f9f9f9;
