--- a/src/pages/styles/transcribePageStyles.css
+++ b/src/pages/styles/transcribePageStyles.css
@@ -7,7 +7,7 @@
     margin-top: 10%;
     margin-left: auto;
     margin-right: auto;
-    color: var(--gray-100);
+    color: var(--text-primary);
     font-family: var(--secondary-font);
     flex: 1;
 }
