--- a/src/pages/styles/homepageStyles.css
+++ b/src/pages/styles/homepageStyles.css
@@ -1,3 +1,26 @@
 .home-page-wrapper {
     height: 100dvh;
 }
+
+.heading {
+    margin-top: 25dvh;
+}
+
+.heading h1 {
+    font-family: var(--primary-font);
+    font-weight: 600;
+    font-size: 70px;
+}
+
+.heading-line-1 {
+    margin-bottom: 3dvh;
+    color: var(--text-secondary);
+}
+
+.heading-line-2 {
+    background: -webkit-linear-gradient(#ffffff, #232323);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3); /* More subtle shadow */
+
+}
