--- a/src/pages/styles/homepageStyles.css
+++ b/src/pages/styles/homepageStyles.css
@@ -1,26 +1,79 @@
 .home-page-wrapper {
-    height: 100dvh;
+    min-height: 100dvh;
+    animation: fadeInAnimation ease 4s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+.home-page-content {
+    min-height: 100%;
 }
 
 .heading {
-    margin-top: 25dvh;
+    margin-top: 23dvh;
 }
 
 .heading h1 {
     font-family: var(--primary-font);
     font-weight: 600;
-    font-size: 70px;
+    font-size: 85px;
+
 }
 
 .heading-line-1 {
-    margin-bottom: 3dvh;
-    color: var(--text-secondary);
+    margin-bottom: 2dvh;
+    background: -webkit-linear-gradient(rgb(241, 241, 241) 0%, rgb(220, 220, 220) 47%, rgb(149, 149, 149) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .heading-line-2 {
-    background: -webkit-linear-gradient(#ffffff, #232323);
+    background-image: linear-gradient(to right,
+            #462523 0,
+            #a76d17 22%,
+            #ffed91 45%,
+            #f9dc5b 50%,
+            #fce573 55%,
+            #af741b 78%,
+            #462523 100%);
+    color: transparent;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3); /* More subtle shadow */
+}
 
+.heading-line-2 h1 {
+    font-size: 85px;
+}
+
+.subheading {
+    margin-top: 5dvh;
+    color: var(--text-tertiary);
+    margin-bottom: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    font-weight: 200;
+    font-family: var(--tertiary-font);
+}
+
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@media (max-width: 768px) {
+    .heading {
+        margin-top: 5dvh;
+    }
+
+    .heading h1 {
+        font-size: xx-large;
+    }
+
+    .subheading h4 {
+        font-size: small;
+    }
 }
