--- a/src/components/styles/transcribeFormStyles.css
+++ b/src/components/styles/transcribeFormStyles.css
@@ -60,6 +60,12 @@
     border: none !important;
 }
 
+.spinner-row {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
 .spinner-col {
     margin-top: 1.5%;
     margin-left: auto;
