--- a/src/components/styles/headingButtonStyles.css
+++ b/src/components/styles/headingButtonStyles.css
@@ -5,8 +5,8 @@
 }
 
 .heading-button {
-    padding-top: 1%;
-    padding-bottom: 1%;
+    padding-top: 10px;
+    padding-bottom: 10px;
     padding-left: 2.5%;
     padding-right: 2.5%;
     width: auto;
