--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@300&family=Roboto:wght@500&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Urbanist&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,500;1,500&family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Outfit:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
   /* ------- colors ------- */
@@ -36,9 +35,9 @@
   /* ---------------------- */
 
   /* ------- fonts ------- */
-  --primary-font: "Inter Tight", sans-serif;
-  --secondary-font: 'Open Sans', sans-serif;
-  --tertiary-font: 'Urbanist', sans-serif;
+  --primary-font: "Open Sans", sans-serif;
+  --secondary-font: 'Urbanist', sans-serif;
+  --tertiary-font: 'Roboto', sans-serif;
   /* --------------------- */
 }
 
@@ -46,7 +45,7 @@
   text-align: center;
   width: 100%;
   background-color: var(--surface-primary);
-  font-family: var(--secondary-font);
+  font-family: var(--primary-font);
   display: flex;
   flex-direction: column;
   min-height: 100vh;
