--- a/src/pages/styles/transcribePageStyles.css
+++ b/src/pages/styles/transcribePageStyles.css
@@ -10,7 +10,6 @@
     margin-left: auto;
     margin-right: auto;
     color: var(--text-primary);
-    font-family: var(--secondary-font);
     background-color: var(--surface-srcondary);
     flex: 1;
 }
@@ -19,9 +18,9 @@
     margin-bottom: 50px;
     margin-left: auto;
     margin-right: auto;
-    font-size: xx-large;
-    font-weight: 200;
-    font-family: var(--tertiary-font);
+    font-size: 40px;
+    font-weight: 500;
+    font-family: var(--secondary-font);
 }
 
 @media (max-width : 680px) {
