--- a/src/pages/styles/transcribePageStyles.css
+++ b/src/pages/styles/transcribePageStyles.css
@@ -21,6 +21,12 @@
     font-size: 40px;
     font-weight: 500;
     font-family: var(--secondary-font);
+
+    /* ------- Gradient Header Style ------- */
+    background: var(--header-primary);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    /* --------------------- */
 }
 
 @media (max-width : 680px) {
@@ -28,7 +34,7 @@
         margin-bottom: 30px;
         font-size: x-large;
     }
-    
+
     header .logo-area {
         margin-left: auto;
         margin-right: auto;
@@ -37,7 +43,7 @@
     }
 }
 
-@media (max-width : 450px) {  
+@media (max-width : 450px) {
     .transcribe-heading {
         font-size: large;
     }
