Added library page nav

--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,37 @@
   transition: opacity 600ms, transform 600ms;
 }
 
+.page-wrapper {
+  min-height: 100dvh;
+  background-color: var(--surface-srcondary);
+}
+
+.page-content {
+  min-height: 100dvh;
+  width: 65%;
+  margin-top: 10%;
+  margin-left: auto;
+  margin-right: auto;
+  color: var(--text-primary);
+  background-color: var(--surface-srcondary);
+  flex: 1;
+}
+
+.page-heading {
+  margin-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 40px;
+  font-weight: 500;
+  font-family: var(--secondary-font);
+
+  /* ------- Gradient Header Style ------- */
+  background: var(--header-primary);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  /* --------------------- */
+}
+
 footer {
   height: 35dvh;
   overflow: auto;
