--- a/src/components/styles/transcribeFormStyles.css
+++ b/src/components/styles/transcribeFormStyles.css
@@ -13,6 +13,14 @@
     margin-right: auto;
 }
 
+#controlTextArea1, #controlTextArea2 {
+    background-color: transparent;
+    color: var(--text-primary);
+    border: none;
+    resize: none;
+}
+
+
 .submit-button-row {
     margin-left: auto;
     margin-right: auto;
